<resources>
    <string name="app_name">UberApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register_button">Registrarse</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_history">Historial</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_settings">Ajustes</string>
    <string name="user_hint">Usuario</string>
    <string name="pass_hint">Contraseña</string>
    <string name="welcome_driver">Soy conductor</string>
    <string name="welcome_user">Soy pasajero</string>
    <string name="login">Accede</string>
    <string name="is_driver">Soy conductor</string>
    <string name="is_user">Soy usuario</string>
    <string name="button_pay">Pagar viaje</string>

    <string name="user_profile_desc">Perfil</string>
    <string name="from">Desde : </string>
    <string name="to">Hasta :</string>
    <string name="trip_resume">Resumen del viaje</string>
    <string name="trip_price">Precio :</string>
    <string name="trip_confirm">Confirmar viaje</string>
    <string name="trip_km">Total Kms :</string>

    <string name="actual_ubi">Ubicación actual</string>
    <string name="dest_ubi">Ubicación de destino</string>
    <string name="map_example">Ejemplo de mapa</string>
    <string name="message_screen">Enviar mensaje</string>
    <string name="receive_message_screen">Recibir mensaje</string>
    <string name="insert_message">Escribe un mensaje</string>
    <string name="send">Enviar</string>
    <string name="sent_by">Enviado por:</string>
    <string name="subject">Asunto :</string>
    <string name="tripBtn">Pedir viaje</string>

    <string name="ok_caption">OK</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>