<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/message_screen"/>

    <EditText
        android:id="@+id/messageBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:hint="@string/insert_message"
        android:layout_marginLeft="15dp"
        android:inputType="text"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/sendMsgBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/send"/>

</LinearLayout>