<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rr1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2E7BC1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll1"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="155dp"
            android:layout_gravity="center"
            android:layout_height="147dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/textUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_carlogo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@id/ll1"
        android:id="@+id/ll2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:hint="@string/user_hint"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pass_hint"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/radioUser"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginleft="20dp"
                android:text="@string/is_user" />

            <RadioButton
                android:id="@+id/radioDriver"
                android:checked="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/is_driver" />

        </RadioGroup>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/register_button" />

    </LinearLayout>

</RelativeLayout>