<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/receive_message_screen"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_height="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/sent_by"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/fromwho"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="70dp"
        android:textSize="15sp"/>
</LinearLayout>